--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,22 @@
 [versions]
-agp = "8.10.0"
+agp = "8.10.1"
 kotlin = "1.9.0"
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlinxCoroutinesCore = "1.7.3"
 libaryBase = "1.16.0"
 libarySync = "1.16.0"
-lifecycleRuntimeKtx = "2.8.4"
-activityCompose = "1.9.1"
-composeBom = "2024.04.01"
-lifecycleViewmodelCompose = "2.8.7"
-navigationCompose = "2.8.5"
-appcompat = "1.6.1"
-material = "1.10.0"
+libraryBase = "1.16.0"
+librarySync = "1.16.0"
+lifecycleRuntimeKtx = "2.9.0"
+activityCompose = "1.10.1"
+composeBom = "2025.05.01"
+lifecycleViewmodelCompose = "2.9.0"
+navigationCompose = "2.9.0"
+appcompat = "1.7.0"
+material = "1.12.0"
 realm = "1.16.0"
 
 [libraries]
@@ -34,8 +37,11 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 libary-base = { module = "io.realm.kotlin:libary-base", version.ref = "libaryBase" }
 libary-sync = { module = "io.realm.kotlin:libary-sync", version.ref = "libarySync" }
+library-base = { module = "io.realm.kotlin:library-base", version.ref = "libraryBase" }
+library-sync = { module = "io.realm.kotlin:library-sync", version.ref = "librarySync" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
